Tidied Popup. Bug squashed
Initial state bug fixed.
Popup tidied

--- a/styles.css
+++ b/styles.css
@@ -1,17 +1,12 @@
  /* * { 
     outline: 2px solid red;
     /* transform: rotate(39deg); */
- } */
+ */
 
  .refinement-header { 
     background-color: red;
  }
 
- #refinement-vendor-type { 
-
-    /* display: none; */
-    /* text-decoration: underline; */
- }
 
 
 
